[package]
name = "bitfield-derive"
version = "0.2.0"
authors = ["Varphone Wong <varphone@qq.com>"]
description = "This crate provides derive to generate struct with bitfield access"
license = "MIT"
readme = "README.md"
repository = "https://github.com/varphone/bitfield-derive.git"
homepage = "https://github.com/varphone/bitfield-derive"
documentation = "https://docs.rs/bitfield-derive"
edition = "2018"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }

[lib]
proc-macro = true
